First round of updates to sorting logic; temporarily removed body overflow hiding to fix vivaldi

--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -178,7 +178,7 @@
 }
 
 @utility body-basics {
-  @apply bg-background text-foreground overflow-hidden;
+  @apply bg-background text-foreground; /* overflow-hidden -- this breaks vivaldi */
 
   width: 100vw;
   min-width: 100vw;
